--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run dev",
+    "server": "nodemon src/server.js",
+    "client": "nodemon src/client.js",
     "dev": "nodemon src/index.js"
   },
   "repository": {
